# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2017-04-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix usage of the owner service configuration option
      when it is used with the chroot service configuration option

2017-04-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix Python CloudI API compatibility with Python v3
      (incompatibility was added in CloudI 1.7.0)
    * Add request_rate integration test throughput data for 1.7.1

2017-04-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cpg

2017-04-12 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix validation of chroot and directory service configuration options
      to work properly together and require absolute paths
    * Update cpg

2017-04-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add Erlang map type specification usage
    * Update cpg

2017-04-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix the chroot service configuration option to change the
      current working directory to / if the directory
      service configuration option was not provided
    * Fix the chroot service configuration option to be done before
      the owner service configuration option is applied
    * Change the nice and limit service configuration options to be
      applied before the owner service configuration option
      (this approach is more consistent with the cgroup
       service configuration option; the user/group executing
       CloudI owns the CloudI external service OS processes and these
       permissions should be used for controlling the OS process
       attributes before the exec occurs)

2017-04-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the chroot service configuration option for external services
    * Fix C++ compilation warnings

2017-03-31 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve reltool configuration for examples