@@ -3,6 +3,9 @@
 
 2017-04-20 Michael Truog   <mjtruog [at] gmail (dot) com>
 
+    * Fix chroot and directory service configuration options
+      validation of absolute paths
+    * Add libtool/autoconf version check
     * Fix usage of the owner service configuration option
       when it is used with the chroot service configuration option
 
